@startuml
'https://plantuml.com/class-diagram

title US15 Class Diagram

class GetEmployeeListView {
}

class GetEmployeeListController {
  + getEmployeeList(role) : List<EmployeeList>
}

class EmployeeContainer {
    - employees : list<Employee>
    ---
    + add(Employee employee) : void
}


enum EmployeeType  {
    NURSE : int
    RECEPTIONIST : int
}
class Employee {
    type : EmployeeType
    employee_id : static int
    name : string
    phone_number : int
    email : string
    zip_code : string
}

GetEmployeeListView ..> GetEmployeeListController : "uses >"
GetEmployeeListController ..> EmployeeContainer : "uses >"
EmployeeContainer "    1" -- "0..*        "Employee : "stores the information of >"
Employee "*" -- "1   "  EmployeeType: has a type of >

@enduml